--- a/pre_labs/pre_lab_01/pre_lab_01.Rmd
+++ b/pre_labs/pre_lab_01/pre_lab_01.Rmd
@@ -34,7 +34,7 @@ There is no code to run from Chapter 1.
 
 ### Task 1: The console
 **Task** In the console (look below), type 2+2 and hit enter. What does it return? Type your answer below.
-**Answer:**
+**Answer: [1] 4**
 
 ### Task 2: Variables
 **Task** Put the following code -- which stores the numeral 2 as a variable called number -- in the console and hit enter.    
@@ -51,7 +51,7 @@ number * number
 
 What does it return? Type your answer below:
 
-**Answer:**
+**Answer: [1] 4**
 
 ### Task 3: Install packages
 **Task** In the console, run the following code to install the Tidyverse:
@@ -93,7 +93,7 @@ ppp_maryland_loans <- read_rds("pre_lab_01.rds")
 
 Once it loads, look at the environment window at right in RStudio for ppp_maryland_loans. It's next to a small blue circle with a white arrow in it.  To the right of that, look at how many "obs" the dataset has ("obs" is short for observation, which is another way of saying rows or records). Look at how many variables it has (another way of saying columns or fields).  Write the number of observations and variables below.
 
-**Answer**
+**Answer: 195856 observations, 63 variables**
 
 ### Task 3: Glimpse data
 **Task** Run the following codeblock to use glimpse() to get a sense of the data, some of the values in each field/variable/column, and the data types of each field/variable/column.
@@ -104,6 +104,8 @@ glimpse(ppp_maryland_loans)
 
 In the space below, write the data type for the "name" column and the "amount" column (it's in light gray, offset by < >).  Also offer your best guess as to what the "name" column and the "amount" column represent.
 **Answer**
+**name: character, name of business**
+**amount: numeric, amount of loan**
 
 ### Task 4: Examine data "head"
 **Task** Run the following codeblock to use head() to examine the first six rows of data. Explore the data by clicking the black arrow on the right side of the output table, allowing you to examine additional columns.
@@ -111,7 +113,7 @@ In the space below, write the data type for the "name" column and the "amount" c
 head(ppp_maryland_loans,10,)
 ```
 In the space below, write the name of the business from the first row of the "name" column.
-**Answer**
+**Answer: Tarbiyah Academy Inc**
 
 ### Task 5: Explore data with interactive dataframe
 **Task** look at the environment window at right in RStudio for ppp_maryland_loans. It's next to a small blue circle with a white arrow in it. Click on the ppp_maryland_loans -- not the blue circle. It will open the dataframe as an interactive table.  Scroll down to see additional rows.  Scroll left to see additional columns. Click on a column name to sort by that column.
@@ -128,7 +130,7 @@ ppp_maryland_loans %>%
   )
 ```
 How many loans does Anne Arundel County have?  Put your answer in the space below.
-**Answer** 17336 loans
+**Answer: 17336 loans** 
 
 ### Task 7
 **Task** Run the following codeblock to group the ppp_maryland_loans dataframe by the county for each loan, count the number of loans in that group, and then sort so the county with the highest number of loans is listed first.
@@ -141,7 +143,7 @@ ppp_maryland_loans %>%
   arrange(desc(count_loans))
 ```
 Which county has the most loans?  Put your answer in the space below.
-**Answer** Montgomery County has the most loans.
+**Answer: Montgomery County has the most loans, at 37,781.**
 
 ### Task 8
 **Task** Run the following codeblock to group the ppp_maryland_loans dataframe by county and race, then count the number of loans in that group, and then sort from A-Z by county and then by race.
@@ -155,7 +157,7 @@ ppp_maryland_loans %>%
 ```
 
 How many records were there for White loans in Anne Arundel County, according to the data?  Put your answer in the space below.
-**Answer** 1854
+**Answer: 1854**
 
 ### Task 9
 **Task** Run the following codeblock to group the ppp_maryland_loans dataframe by the county for each loan, and then count the number of loans in that group and add up the value of all loans in that group. Then sort so the county with the highest total loan dollar amount is listed first.
@@ -169,7 +171,7 @@ ppp_maryland_loans %>%
   arrange(desc(total_loans_amount))
 ```
 Which county has the highest total dollar amount of loans?  Put your answer in the space below.
-**Answer**
+**Answer: Montgomery County**
 
 ### Task 10
 **Task** Run the following codeblock to group the ppp_maryland_loans dataframe by the county for each loan. Then do the following summarizations for each group:count the number of loans , add up the value of all loans, and calculate the mean and median loan amounts. Then sort so the county with the highest mean dollar amount is listed first.
@@ -185,7 +187,7 @@ ppp_maryland_loans %>%
   arrange(desc(mean_loan_amount))
 ```
 Which county has the highest mean loan amount?  Put your answer in the space below.
-**Answer**
+**Answer: Howard County**
 ### Task 11
 **Task** Run the following codeblock to group the ppp_maryland_loans dataframe by the county for each loan. Then do the following summarizations for each group:count the number of loans, add up the value of all loans, calculate the mean and median loan amounts and calculate the smallest and largest loans. Then sort so the county with the largest max loan amount is listed first.
 ```{r}
@@ -202,7 +204,7 @@ ppp_maryland_loans %>%
   arrange(desc(max_loan_amount))
 ```
 Which is the max loan amount in Anne Arundel County?  Put your answer in the space below.
-**Answer**
+**Answer: $10,000,000**
 
 ### Task 12
 **Task** Sort the entire dataset so that the biggest loans appear first, allowing you to see which companies got the biggest loans.
@@ -212,4 +214,4 @@ ppp_maryland_loans %>%
 
 ```
 How many companies got $10 million loans? One of them is a restaurant chain.  What kind of food do they serve? Put your answers in the space below.
-**Answer**
+**Answer: Five companies got $10 million loans, including barbecue chain Mission BBQ.**
