--- a/labs/lab_01/lab_01.rmd
+++ b/labs/lab_01/lab_01.rmd
@@ -46,7 +46,7 @@ wv_ppp_loans <- read_rds("lab_01.rds")
 
 **Task** Run the codeblock below to use glimpse to get a sense of the column names, types and sample data. 
 **Q1** How many rows and columns does this dataframe have?
-**A1** [write your answer here]
+**A1** 33,703 rows, 63 columns
 
 ```{r}
 glimpse(wv_ppp_loans)
@@ -55,33 +55,42 @@ glimpse(wv_ppp_loans)
 ## Answer questions
 
 **Q2** Which West Virginia county got the most loans? How many?
-**A2** [write your answer here]
+**A2** Kanawha County, with 4,332 loans, got the most PPP loans in West Virginia.
 
 ```{r}
-# Write the code to produce your answer here
-
+wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+    summarise(
+      count_wvloans = n()
+      ) %>%
+    arrange(desc(count_wvloans))
 ```
 **Q3** Which West Virginia county got the fewest loans? How many?
-**A3** [write your answer here]
+**A3** Wirt County, with 36 loans, got the fewest.
 
 ```{r}
-# Write the code to produce your answer here
-
+wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+    summarise(
+      count_wvloans = n()
+      ) %>%
+    arrange(count_wvloans)
 ```
 **Q4** What's your best educated guess to explain why the county identified in question 2 had a lot of loans and why the county identified in question 3 had only a few loans? Hint: you won't find the answer in the data, you'll need to do some quick web research. You do not need to write any code for this question, so no codeblock is provided.  
-**A4** [write your answer here]
+**A4** According to the U.S. Census Bureau, Kanawha County has the largest population and Wirt County has the smallest. (https://www.census.gov/programs-surveys/popest/technical-documentation/research/evaluation-estimates/2020-evaluation-estimates/2010s-counties-total.html)
 
 
 **Q5** What West Virginia business got the state's largest PPP loan? How much was it for? What does the business do? How many jobs did the loan retain, according to the data?
-**A5** [write your answer here]
+**A5** The Greenbrier Hotel Corp. got West Virginia's largest loan, worth $8,912,202. The resort, a combined hotel, golf course, casino, conference center and former Cold War bunker, said it retained 500 jobs.
 
 ```{r}
-# Write the code to produce your answer here
+wv_ppp_loans %>%
+  arrange(desc(amount))
 
 ```
 
 **Q6** What West Virginia politician (with his family) owns the company identified in question 2? What's your source for that information? Hint: this will require web research, you won't be able to answer this purely from the data set.  You do not need to write any code for this question, so no codeblock is provided.  
-**A6** [write your answer here]
+**A6** West Virginia Gov. Jim Justice and his family own the Greenbrier. (https://governor.wv.gov/about/Pages/default.aspx, https://www.bloomberg.com/profile/company/3288406Z:US)
 
 **Q7**. Produce a summary table that has the following information for West Virginia as a whole (the whole state, not by county):
 * count of loans
@@ -93,9 +102,17 @@ glimpse(wv_ppp_loans)
 
 Store it as a variable object called `wv_summary` so that you can examine it with the data viewer. What newsworthy nuggets jump out at you that you could imagine dropping into a news story? Write a few summary sentences with overall findings. 
 
-**A7** [write your answer here]
+**A7** West Virginian businesses got 33,703 loans, skewed heavily toward smaller-dollar loans. The median loan was $20,832, significantly smaller than the average loan of $77,338. The average loan's much smaller than the state's largest, nearly $9 million. West Virginia's economy appears to run on small businesses.
 ```{r}
-# Write the code to produce your answer here
+wv_summary = wv_ppp_loans %>%
+  summarise(
+    count_loans = n(),
+    total_loans = sum(amount),
+    average_loan = mean(amount),
+    median_loan = median(amount),
+    smallest_loan = min(amount),
+    largest_loan = max(amount)
+  )
 ```
 
 **Q8** Produce a summary table that has the following information for each West Virginia county:
@@ -110,7 +127,20 @@ Store it as a variable object called `wv_county_summary` so that you can examine
 
 What newsworthy nuggets or patterns jump out at you that you could imagine dropping into a news story or doing follow up reporting on? Write up a few sentence that summarizes one county. 
 
-**A8** [write your answer here]
+**A8** Seven counties got fewer than 100 loans. Are those counties that small, or do businesses not know how or know to apply for the program? Do these smallest loans, as little as $165, make a difference in retaining jobs, the purpose of the PPP program? Calhoun, Webster and Dodridge Counties had fewer than 100 loans total but rank as the top 3 average loan size by county -- what's up with that? It would be interesting to map the average loan amount against population and find the outliers. 
+
+Greenbrier County got the single largest loan, but the county's a smaller player in West Virginia's use of PPP loans. It's 908 total loans falls below average for West Virginia's counties, and even with its single $9 million loan skewing the stats, its average loan amount sits below the state's average.  
 ```{r}
-# Write the code to produce your answer here
+wv_county_summary = wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarise(
+    count_loans = n(),
+    loans_total = sum(amount),
+    average_loan = mean(amount),
+    median_loan = median(amount),
+    smallest_loan = min(amount),
+    largest_loan = max(amount)
+  ) %>%
+  arrange(project_county_name)
+
 ```
