--- a/labs/lab_02/lab_02.rmd
+++ b/labs/lab_02/lab_02.rmd
@@ -47,17 +47,40 @@ west_virginia_ppp <- read_rds("lab_02.rds")
 ## Answer questions
 
 **Q1** Create a new column that divides the loan amounts into multiple options: under_10k, 10k_50k, 50k_100k, 100k_500k, 500k_1m, 1m_plus. How many loans are in each group?
-**A1** [write your answer here]
+**A1**
+under_10k	9310
+10k_50k	15372
+50k_100k	3978
+100k_500k	4152			
+500k_1m	540			
+1m_plus	356	
 
 ```{r}
-# Write the code to produce your answer here
-west_virginia_ppp %>%
-  select(amount) %>%
-  mutate(
-    amount_category=
-  )
-  
 
+#sample
+#maryland_with_in_out <- maryland_ppp %>%
+#  mutate(
+#    in_out = case_when(
+#        servicing_lender_state == 'NA' ~ "NA",
+#        servicing_lender_state == 'MD' ~ "IN",
+#        servicing_lender_state != 'MD' ~ "OUT"
+#      )
+#  )
+
+west_virginia_ppp %>%
+#  select(amount) %>%
+  mutate(
+    amount_bin = case_when(
+      amount < 10000 ~ "under_10k",
+      amount >= 10000 & amount < 50000 ~ "10k_50k",
+      amount >= 50000 & amount < 100000 ~ "50k_100k",
+      amount >= 100000 & amount < 500000 ~ "100k_500k",
+      amount >= 500000 & amount < 1000000 ~ "500k_1m",
+      amount >= 1000000 ~ "1m_plus"
+    ) 
+  ) %>%
+  count(amount_bin)
+  
 
 ```
 
@@ -75,28 +98,26 @@ wv_ppp_loans %>%
 ```
 
 **Q3** How would you describe the top 10 list of those lenders? What do they have in common or not? (You may want to look up some of the top ones.)
-**A3** The top lenders with undistributed funds appear to be smaller, online institutions, with niches in nontraditional lending specifically as small businesses, mortgages and others unable to get traditional loans. 
+**A3** The top lenders with undistributed funds appear to be smaller, online institutions, with niches in nontraditional lending specifically for small businesses, homebuyers and others unable to get traditional loans. 
 
 **Q4** Which month in 2021 had the most loans approved?
-**A4** [write your answer here]
+**A4** March
 
 ```{r}
 #colnames(wv_ppp_loans)
 #wv_ppp_loans %>% 
 #  select(date_approved)
 
-#aryland_ppp %>%
+#sample
+#maryland_ppp %>%
 #  mutate(Month = floor_date(date_approved, "month")) %>%
 #  group_by(Month) %>%
 #  summarise(total = n()) %>%
 #  arrange(desc(total))
 
 wv_ppp_loans %>%
-#  filter(date_approved >= 2021-01-01) %>%
-#  select(date_approved)
-# works except for date filter
-
-  mutate(month_approved = floor_date(date_approved), "month") %>%
+  filter(date_approved >= "2021-01-01") %>%
+  mutate(month_approved = floor_date(date_approved, "month")) %>%
   group_by(month_approved) %>%
   summarise(total_loans = n()) %>%
   arrange(desc(total_loans))
