--- a/pre_labs/pre_lab_11/pre_lab_11.Rmd
+++ b/pre_labs/pre_lab_11/pre_lab_11.Rmd
@@ -450,6 +450,7 @@ The highest ranking counties stand out nicely in this version, but it's still ha
 
 So let's change the color scale to a "log" scale, which will help us see those differences a bit more clearly. 
 
+# Can you establish intentional bins instead of using a log scale?
 
 ### Task: Run code
 **Task** Run the following code. Describe the output in the space below. What patterns do you see?
